# mk_manager

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
design-system/css/: design-system.css
mk_manager/: __init__.py  config.py  dependencies.py  main.py
mk_manager/domain/: __init__.py  entities.py
mk_manager/frontend/: index.html
mk_manager/frontend/css/: style.css
mk_manager/frontend/js/: api.js  app.js  archive.js  assets.js  config.js  contextmenu.js  delete-modal.js  diagram-builder.js  editor.js  export.js  files.js  format-code.js  graph.js  kanban.js  list.js  prefs.js  preview.js  quickopen.js  search-filter.js  settings.js  sfx.js  sidebar.js  state.js  table-builder.js  utils.js  views.js
mk_manager/models/: __init__.py  schemas.py
mk_manager/repositories/: __init__.py  base.py  markdown.py
mk_manager/routers/: __init__.py  assets.py  files.py  graph.py  search.py  settings.py  stats.py  tags.py
mk_manager/services/: __init__.py  file_service.py
