[project]
name = "mk-manager"
version = "0.1.0"
description = "Markdown file manager with notes and tasks support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pyyaml>=6.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
mk= "mk_manager.main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mk_manager"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.28.0",
    "pytest-asyncio>=0.24.0",
]
